@@ -1,4 +1,5 @@
 [1.4.1]
+- API Addition: added possibility to scan pending telegrams, so they can be saved and subsequently restored on game loading.
 - API Addition: added pathfinding and path smoothing, see https://github.com/libgdx/gdx-ai/wiki/Pathfinding
 - API Addition: added scheduling API supporting task time slicing over several frames, see https://github.com/libgdx/gdx-ai/wiki/Scheduling
 - API Change: moved raycast classes to the common package com.badlogic.gdx.ai.utils
